* Fixed rules to include changelog in package.
git-svn-id: file:///var/lib/svn/m3ugen/trunk@20 1e1f2d8e-b8a0-4649-aeed-5658290dd61f

--- a/debian/rules
+++ b/debian/rules
@@ -40,6 +40,7 @@ binary-indep: build install
 	dh_installdocs
 	dh_installexamples
 	dh_installman m3ugen.1
+	dh_installchangelogs
 	dh_link
 	dh_compress
 	dh_fixperms
