--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Architecture: all
 Depends: ${perl:Depends}, libaudio-file-perl, libgetopt-mixed-perl, libterm-readkey-perl
 Description: Simple m3u playlist generator
  m3ugen is a simple m3u playlist generator. It’s written in Perl and
- supports FLAC, MP3, and Ogg Vorbis format tags, though additional formats
+ supports FLAC, MP3, MP4 and Ogg Vorbis format tags, though additional formats
  can be added by simply extending Audio::File (libaudio-file-perl in Debian).
  .
  m3ugen will scan a directory (identified by source) and all media files in
